Initialize repo with ResNet code, basic documentation

--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-lib_name = nbdev_template
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = breakhis_gradcam
+user = dthiagarajan
+description = Classification of the BreaKHis dataset with GradCAM support
+keywords = Deep Learning, GradCAM, BreaKHis, breast cancer
+author = Dilip Thiagarajan
+author_email = dt372@cornell.edu
+copyright = Cornell University
 branch = master
 version = 0.0.1
 min_python = 3.6
