Finalize data module and corresponding documentation

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -13,7 +13,7 @@ entries:
       title: ResNet Backbone
       url: /resnet
     - output: web,pdf
-      title: Title
+      title: BreaKHis Data Processing
       url: /data
     output: web
     title: breakhis_gradcam
