--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -15,6 +15,9 @@ entries:
     - output: web,pdf
       title: BreaKHis Data Processing
       url: /data
+    - output: web,pdf
+      title: Utilities
+      url: /utils
     output: web
     title: breakhis_gradcam
   output: web
