--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -18,6 +18,9 @@ entries:
     - output: web,pdf
       title: Utilities
       url: /utils
+    - output: web,pdf
+      title: Visualization
+      url: /vis
     output: web
     title: breakhis_gradcam
   output: web
