--- a/settings.ini
+++ b/settings.ini
@@ -20,7 +20,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = torch>=1.4.0 torchvision matplotlib pillow opencv
+requirements = torch>=1.4.0 torchvision matplotlib pillow opencv-python
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 
