--- a/settings.ini
+++ b/settings.ini
@@ -42,10 +42,10 @@ title = %(lib_name)s
 
 #Optional advanced parameters
 #Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
+monospace_docstrings = True
 #Test flags: introduce here the test flags you want to use separated by |
-#tst_flags = 
+tst_flags = testing
 #Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
 #custom_sidebar = 
 #Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
+cell_spacing = 2
